# tree-sitter-chatito

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  build.js  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  release.yml
bindings/c/: tree-sitter-chatito.pc.in  tree-sitter-chatl.pc.in
bindings/c/tree_sitter/: tree-sitter-chatito.h
bindings/go/: binding_test.go  chatito.go  chatl.go
bindings/node/: binding.cc  binding_test.js  chatette.js  chatito.js  chatl.js  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_chatito/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterChatitoTests/: TreeSitterChatitoTests.swift
bindings/swift/chatl/TreeSitterChatl/: chatl.h
examples/: .gitignore
extensions/chatette/: grammar.js  package.json
extensions/chatette/src/: grammar.json  node-types.json  parser.c
extensions/chatl/: CMakeLists.txt  Makefile  grammar.js  package.json
extensions/chatl/src/: grammar.json  node-types.json  parser.c
queries/: highlights.scm
script/: parse-examples
src/: grammar.json  node-types.json  parser.c
test/corpus/: entities.txt
test/highlight/: example.chatl  rasa.chatito
test/tags/: rasa.chatito
