[package]
name = "tree-sitter-chatito"
description = "chatito grammar for the tree-sitter parsing library"
version = "0.4.0"
keywords = ["incremental", "parsing", "chatito"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter-grammars/tree-sitter-chatito"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "extensions/*/grammar.js",
  "extensions/*/src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "^1.0"
